fixed overlapping footer

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,8 +1,12 @@
 body,html{
     width: 100%;
     height: 100%;
-    /*background: url('/image/background.jpg') no-repeat center center;
-    background-size: cover;*/
+}
+hr{
+    width: 100%;
+    height: 10px;
+    margin: 0;
+    padding: 0;
 }
 #ContentOfBody{
     background: url('/image/background.jpg') no-repeat center center;
@@ -31,12 +35,7 @@ body,html{
 footer{
     text-align: center;
     background: white;
-    padding: 0px;
-    margin: 0px;
-}
-hr{
-    width: 100%;
-    height: 10px;
-    margin: 0;
-    padding: 0;
+    position: relative;
+    bottom: 0;
+    left: 0;
 }
